infra/k8s/base/backend-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-public
spec:
  selector:
    app: backend-public
  ports:
    - name: http
      port: 4000
      targetPort: http
