infra/k8s/base/backend-staff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-staff
spec:
  selector:
    app: backend-staff
  ports:
    - name: http
      port: 4000
      targetPort: http
