infra/k8s/base/staff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staff
spec:
  selector:
    app: staff
  ports:
    - name: http
      port: 3001
      targetPort: http
